--- a/config.json
+++ b/config.json
@@ -11,7 +11,7 @@
             "settings":{
                 "clients":[
                     {
-                        "id":"0f2e98bf-83c3-4d8f-a2fe-df88cec9f37c",
+                        "id":"uuid",
                         "flow":"xtls-rprx-direct"
                     }
                 ],
